--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^5.0.10",
     "axios": "^0.24.0",
     "body-parser": "^1.19.0",
     "ejs": "^3.1.6",
@@ -17,6 +18,7 @@
     "hbs": "^4.1.2",
     "mongoose": "^6.0.9",
     "nodemon": "^2.0.15",
+    "popups": "^1.1.3",
     "uuid": "^8.3.2"
   },
   "description": ""
