--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "hbs": "^4.1.2",
     "mongoose": "^6.0.9",
+    "nodemailer": "^6.7.2",
     "nodemon": "^2.0.15",
     "popups": "^1.1.3",
     "uuid": "^8.3.2"
